apps/codeai/envTypes/production/ingress.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdo-dashboard
  annotations:
    argocd.argoproj.io/ignore-default-links: "true"
    link.argocd.argoproj.io/external-link: https://studio.production.k8s.code.org/
  labels:
    code.ai/dns-name: studio.production
